<resources>
    <string name="app_name">Story Pocket</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profie</string>
    <string name="title_story">Judul Cerita</string>
    <string name="author_story">Penulis Cerita</string>
    <string name="desc_story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus elementum lectus, scelerisque tempor nibh tincidunt vel. Nam in volutpat libero, aliquet venenatis eros. Morbi et est venenatis, tincidunt lorem sed, laoreet leo. Maecenas in ullamcorper leo. Sed elementum lobortis nulla quis gravida. Mauris nec faucibus est, non molestie dui. Integer ultricies purus vel elementum hendrerit. Vivamus viverra, eros eget suscipit interdum, dolor ex volutpat sem, vitae dignissim erat orci nec nulla. In hac habitasse platea dictumst. Proin ante eros, venenatis a viverra ac, fermentum non sapien. Morbi eu elit gravida, rhoncus dolor ac, mattis dolor. Sed sed dignissim turpis. Integer in nisi porta ex mollis mattis. Mauris imperdiet posuere leo, vitae interdum velit consequat a. Proin pharetra libero in mauris vulputate, in condimentum felis consectetur.</string>
    <string name="text_story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas porttitor elit vitae sem rhoncus, sed lobortis velit venenatis. Duis commodo, sem et vulputate ullamcorper, elit quam feugiat dolor, vitae facilisis mauris lorem vel dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus in velit leo. Etiam maximus consectetur aliquet. Donec fermentum, velit id dignissim molestie, quam dui elementum erat, sit amet molestie mauris arcu in est. Etiam pulvinar risus nec feugiat rhoncus. \n Pellentesque nisl felis, maximus a interdum a, imperdiet eleifend dui. Aliquam vitae sagittis dui, at pretium odio. Maecenas consequat tortor eget venenatis tincidunt. Sed nisi libero, interdum sed diam sed, suscipit bibendum tortor. Proin ante augue, ornare ac sagittis eget, scelerisque in turpis. Maecenas tincidunt aliquam erat, non efficitur libero convallis eget. Nunc ut blandit tortor, a rutrum quam. Maecenas tempus in ligula vitae dapibus. Nulla in aliquet ipsum, vitae imperdiet ante. In hac habitasse platea dictumst. Suspendisse in massa eget eros faucibus accumsan quis et dolor. Nullam quis velit viverra, laoreet ipsum vitae, viverra enim. Donec vestibulum libero vel diam auctor, vitae suscipit velit elementum. \n Phasellus auctor suscipit placerat. Vivamus finibus tellus nulla, sit amet commodo libero suscipit ut. Aliquam at scelerisque nibh. Aenean et nisi vitae diam malesuada imperdiet ut vitae justo. Cras ipsum magna, euismod a pretium vitae, ultricies sit amet lorem. Nullam non vulputate metus. Quisque in nisi tortor. Vivamus dapibus efficitur mi, a pharetra arcu bibendum nec. Morbi ullamcorper, orci at tincidunt luctus, nulla est elementum risus, vitae consectetur nulla ex ut sapien. Aenean nec dolor facilisis, semper velit a, porttitor nulla. Integer auctor justo ut leo pharetra, a vestibulum elit gravida. Ut urna neque, egestas eget euismod sed, ornare at ex. Nam et rhoncus lorem. Quisque eget tristique ex, nec tempor eros. In hac habitasse platea dictumst. Nulla in arcu lectus.</string>
    <string name="hi">Hi! What you wanna read today?</string>
    <string name="add_a_title">Add a title</string>
    <string name="add_a_description">Add a description of your story</string>
    <string name="write_a_short_story">Write a short story</string>
    <string name="tagline">Explore worlds within pages: Your journey starts here.</string>
    <string name="welcome">Welcome to</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="qust_havent">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="logo">logo</string>
    <string name="pass">Password</string>
    <string name="create">Create your</string>
    <string name="account">account</string>
    <string name="sign_up">Sign Up</string>
    <string name="qust_have">Already have an account?</string>
    <string name="complete">Complete Your</string>
    <string name="etProfile">profile</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="cover">cover</string>
    <string name="create_title">Create new story</string>
    <string name="read_title">Read Story</string>
    <string name="back">back</string>
    <string name="publish">Publish</string>
    <string name="upload_cover">Upload Cover</string>
    <string name="add_story">Add Story</string>
    <string name="update_profile">Update Profile</string>
    <string name="cancel">Batal Membuat Cerita</string>
    <string name="cancel_edit">Batal Mengubah Cerita</string>
    <string name="message_cancel">Apakah anda ingin membatalkan pembuatan cerita?</string>
    <string name="message_cancel_edit">Apakah anda ingin batal mengubah cerita?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="last_upadated_date">DD MONTH YYYY</string>
    <string name="author">Penulis Cerita</string>
    <string name="edit_story">Edit Story</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update Story</string>
    <string name="load">Loading...</string>

</resources>