<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".CreateUpdateStoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/baseline_arrow_back_24"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/back" />
        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_title"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ExtraText">

        <LinearLayout
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="98dp"
                android:layout_height="154dp"
                android:layout_marginEnd="15dp">

                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="98dp"
                    android:layout_height="154dp"
                    android:background="@drawable/blank_cover"
                    android:layout_gravity="center"
                    android:contentDescription="@string/upload_cover" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/plus_circle" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="260dp"
                android:layout_height="154dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:background="@drawable/bg_form2"
                    android:hint="@string/add_a_title"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/etDesc"
                    android:inputType="text"
                    android:background="@drawable/bg_form2"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/add_a_description"
                    android:textSize="13sp"
                    android:padding="10dp" />
            </LinearLayout>
        </LinearLayout>'
        <EditText
            android:id="@+id/etText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_form2"
            android:hint="@string/write_a_short_story"
            android:textAlignment="viewStart"
            android:textSize="13sp"
            android:padding="10dp"/>


    </LinearLayout>
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="133dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:text="@string/publish"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"
        android:layout_marginVertical="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>