<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="195dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/story_loyout"
        android:background="@drawable/bg_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="98dp"
            android:layout_height="154dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/blank_cover"
            android:layout_gravity="center"
            android:contentDescription="@string/cover" />

        <LinearLayout
            android:layout_width="225dp"
            android:layout_height="154dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_story"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/author_story"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textSize="11sp"/>
            <TextView
                android:id="@+id/desc_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_story"
                android:textSize="7sp"
                android:textColor="@color/semi_black"
                android:visibility="visible"
                android:justificationMode="inter_word"
                android:lines="7"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>