<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="195dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/mystory_loyout"
        android:background="@drawable/bg_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="98dp"
            android:layout_height="154dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/blank_cover"
            android:layout_gravity="center"
            android:contentDescription="@string/cover" />

        <RelativeLayout
            android:layout_width="225dp"
            android:layout_height="154dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/title_mystory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_story"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/updated_date"
                    android:layout_marginVertical="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_upadated_date"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="11sp"/>

            </LinearLayout>
            <ImageView
                android:id="@+id/delete"
                android:visibility="visible"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/baseline_delete_outline_24"
                android:contentDescription="@string/edit_story" />
            <ImageView
                android:id="@+id/pen"
                android:visibility="visible"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/pencil_square"
                android:contentDescription="@string/edit_story" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>